# Rust

./: .gitignore
notes/: Default trait.md  collections.md  crate.md  enums.md  ownership.md  structs.md  trait动态分发.md  所有权(ownership).md  无参数new方法应该实现Default trait.md
projects/auth_service/: Cargo.toml
projects/auth_service/src/: database.rs  lib.rs  main.rs
projects/auth_service/src/auth_utils/: mod.rs
projects/bank/src/: lib.rs
projects/bank/tests/: saving_account.rs
projects/branches/src/: main.rs
projects/cargo_feature/draw/: Cargo.toml
projects/cargo_feature/draw/src/: lib.rs
projects/cargo_feature/draw_consumer/: Cargo.toml
projects/cargo_feature/draw_consumer/src/: main.rs
projects/chapter10/src/: main.rs
projects/collections/src/: main.rs
projects/enums/src/: main.rs
projects/functions/src/: main.rs
projects/generics_browser_command/: Cargo.toml
projects/generics_browser_command/src/: main.rs
projects/guessing_game/src/: main.rs
projects/loops/src/: main.rs
projects/ownership/src/: main.rs
projects/panic/src/: main.rs
projects/rectangles/src/: main.rs
projects/restaurant/src/: lib.rs
projects/structs/src/: main.rs
projects/traits_something/: Cargo.toml
projects/traits_something/src/: main.rs
projects/variables/src/: main.rs
